# lab-computer-graphics

./: README.md
A/5_raytracer/: CMakeLists.txt  camera.cpp  color.cpp  light.cpp  main.cpp  primitive.cpp  primitive.h  raytracer.cpp  scene.txt  vector3.cpp  vector3.h
A/6_terrainengine/: CMakeLists.txt  Camera.cpp  Camera.h  SkyBox.h  SkyBoxTexture.h  Terrain.h  main.cpp
A/6_terrainengine/shader/: skyboxFrag.glsl  skyboxVertex.glsl  terrainFrag.glsl  terrainVertex.glsl
A/6_terrainengine/tool/: Camera.cpp  Camera.h  Shader.cpp  Shader.h  Skybox.h  Terrain.cpp  Terrain.h  Texture.cpp
A5_raytracer/: README.md  color.h  light.cpp  primitive.cpp  primitive.h  raytracer.cpp  raytracer.h  scene.cpp  scene.h  vector3.h
A5_raytracer/Code/: CMakeLists.txt  bmp.cpp  bmp.h  camera.cpp  light.cpp  light.h  main.cpp  raytracer.cpp  vector3.cpp
A5_raytracer/Output/: final.txt
A6_terrainengine/: README.md  main.cpp
A6_terrainengine/Code/: CMakeLists.txt  main.cpp
A6_terrainengine/Code/shader/: skyboxVertex.glsl  terrainFrag.glsl
A6_terrainengine/Code/tool/: Camera.cpp  Skybox.cpp  Skybox.h  Terrain.cpp  Terrain.h  Texture.cpp  Timer.h  stb_image.cpp
A6_terrainengine/include/GLFW/: glfw3.h
A6_terrainengine/shader/: terrainFrag.glsl
A6_terrainengine/tool/: Shader.cpp  Skybox.h  Texture.h
B/1_starrotation/: CMakeLists.txt  Star.cpp  Star.h  Texture.cpp  fragment.glsl
B/3_3dmodel/: CMakeLists.txt  Camera.cpp  Model.cpp  ObjLoader.cpp  main.cpp  stb_image.cpp
B/3_3dmodel/include/glad/: glad.h
B/3_3dmodel/shader/: vertex.glsl
B/4_3dmoel_interactive/: CMakeLists.txt  Camera.cpp  Camera.h  Model.cpp  ObjLoader.h  main.cpp
B/4_3dmoel_interactive/shader/: vertex.glsl
B1_starrotation/: README.md  main.cpp
B1_starrotation/Code/: CMakeLists.txt  main.cpp  vertex.glsl
B1_starrotation/Code/include/glm/gtx/: common.hpp
B1_starrotation/Code/tool/: Texture.h
B3_3dmodel/: CMakeLists.txt  Camera.h  Model.cpp  Model.h  README.md  main.cpp
B3_3dmodel/Code/: Model.h  main.cpp
B3_3dmodel/Code/shader/: fragment.glsl
B3_3dmodel/Code/tool/: Shader.cpp
B3_3dmodel/shader/: fragment.glsl
B3_3dmodel/tool/: Timer.cpp
B4_3dmoel_interactive/: Camera.cpp  Model.cpp  Model.h  README.md  Shader.h  main.cpp
B4_3dmoel_interactive/Code/: CMakeLists.txt  Model.cpp  Model.h  main.cpp
B4_3dmoel_interactive/Code/shader/: vertex.glsl
B4_3dmoel_interactive/shader/: fragment.glsl
C/1_triangle/: 1_triangle.sln  CMakeLists.txt  main.cpp  quadrangleFrag.glsl  vertex.glsl
C/1_triangle/1_triangle/: 1_triangle.vcxproj  1_triangle.vcxproj.filters  main.cpp
C/1_triangle/1_triangle/Debug/: 1_triangle.exe.recipe  vc142.idb
C/1_triangle/1_triangle/Debug/1_triangle.tlog/: 1_triangle.lastbuildstate  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
C/1_triangle/Debug/: 1_triangle.ilk
C/2_pyramid/: CMakeLists.txt  fragment.glsl  glad.c  lightFrag.glsl  main.cpp  vertex.glsl
C/3_cubic/: CMakeLists.txt  Shader.cpp  main.cpp
C/3_cubic/include/glm/: common.hpp
C1_triangle/: README.md
C1_triangle/Code/: CMakeLists.txt  main.cpp  quadrangleVertex.glsl  triangleFrag.glsl
C1_triangle/Output/: triangleVertex.glsl
C2_pyramid/: README.md
C2_pyramid/Code/: CMakeLists.txt  main.cpp
C2_pyramid/Code/tool/: Camera.cpp
C3_cubic/: CMakeLists.txt  README.md  main.cpp
C3_cubic/Code/: CMakeLists.txt  fragment.glsl  main.cpp
lib/libs/assimp/: assimp-vc142-mtd.lib
作业附件/A类作业附件/: 过年.swf
作业附件/A类作业附件/PhysicalEngine/p5out/: make.mk
作业附件/A类作业附件/PhysicalEngine/p5out/msvc/: physics.sln  physics.vcproj
作业附件/A类作业附件/PhysicalEngine/p5out/src/physics/: physics.cpp  spherebody.hpp  spring.cpp
作业附件/A类作业附件/RayTracing/: INTRODUCTION.pptx
作业附件/B类作业附件/: 圣诞贺卡倒计时.swf  开头动画.swf  新年快乐.swf  路径动画.swf
作业附件/C类作业附件/: 淡入淡出.swf  表情.swf  逐帧动画_小鸡破壳.swf
